--- a/src/components/home/HomeAbout.css
+++ b/src/components/home/HomeAbout.css
@@ -11,8 +11,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1.5px dashed black;
+  /* Remove normal border */
+  border: 2px solid transparent;
   border-radius: 35px;
+
+  /* Create spaced dashed border */
+  border-image: repeating-linear-gradient(
+      45deg,
+      #605A5A 0 4px,
+      /* dash length */ transparent 6px 10px /* gap length */
+    )
+    2 round;
+
   padding: 40px 70px;
   gap: 60px;
 }
@@ -75,8 +85,6 @@
   object-fit: cover;
   border: 2px solid #ffcc00;
 }
-
-
 
 /* Large Tablets (≤1200px) */
 @media (max-width: 1200px) {
@@ -210,7 +218,6 @@
   }
 }
 
-
 /* Small Mobile (≤480px) */
 @media (max-width: 480px) {
   .home-about {
@@ -235,7 +242,7 @@
   .home-about-image img {
     width: 100%;
     max-width: 330px; /* Increased width */
-    height: auto;     /* Keep aspect ratio */
+    height: auto; /* Keep aspect ratio */
   }
 }
 
@@ -254,6 +261,3 @@
     transform: translateX(0);
   }
 }
-
-
-
