--- a/src/components/home/StatsSection.css
+++ b/src/components/home/StatsSection.css
@@ -1,15 +1,16 @@
 /* STATS SECTION  */
 .stats-section {
   background-color: #EEF3F8;
-  padding: 7px 0;
-  margin-bottom: 50px;
+  padding: 10px 0;
+  margin-bottom: 10px;
   font-family: "Outfit", sans-serif;
+
 }
 
 .stats-box {
-  background-color: #EEF3F8;
+  /* background-color: #EEF3F8; */
   border-radius: 8px;
-  padding: 40px 80px;
+  padding: 0px 0px;
 }
 
 /* LEFT TEXT BLOCK */
@@ -42,7 +43,7 @@
 
 .get-in-touch:hover {
   text-decoration: underline;
-  color:  #ffd24d;
+  color:  #eab002;
 }
 
 /* RIGHT STATS  */
@@ -102,8 +103,8 @@
 /* Vertical divider between top two items */
 .vertical-line {
   width: 1px;
-  height: 60px;
-  background-color: #ccc;
+  height: 70px;
+  background-color: #666;
 }
 
 /*  RESPONSIVE DESIGN  */
@@ -180,22 +181,23 @@
 @media (max-width: 576px) {
   .stats-section {
     padding: 30px 0;
+    margin-top: -25px;
   }
 
   .stats-box {
-    padding: 25px 15px;
+    padding: 15px 10px;
   }
 
   .stats-title {
-    font-size: 32px;
+    font-size: 34px;
   }
 
   .stats-subtitle {
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .get-in-touch {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .stats-row {
@@ -203,15 +205,15 @@
   }
 
   .stat-header i {
-    font-size: 26px;
+    font-size: 28px;
   }
 
   .stat-header h3 {
-    font-size: 24px;
+    font-size: 26px;
   }
 
   .stat-item p {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
