--- a/src/components/home/Testimonials.css
+++ b/src/components/home/Testimonials.css
@@ -118,8 +118,12 @@
 
 @media (max-width: 576px) {
 
+  .testimonials-wrapper {
+  gap: 15px;
+  margin-top: -30px;
+ 
+}
   
-
   .testimonials-title {
     font-size: 30px;
   }
