--- a/src/components/careers/CareersSections.css
+++ b/src/components/careers/CareersSections.css
@@ -1,3 +1,8 @@
+    .count {
+        margin-left: 1190px;
+        color: #777;
+        font-size: 14px !important;
+     } 
 
 
 .why-work {
@@ -42,7 +47,7 @@
 
 .career-section {
   background: #fff;
-  padding: 25px 100px;
+  padding: 25px 10px;
 }
 
 .job-title {
@@ -222,7 +227,7 @@
   }
 
   .career-box {
-    max-width: 700px;
+    max-width: 500px;
     padding: 25px 20px;
   }
 
@@ -244,13 +249,26 @@
     grid-template-columns: 1fr;
     gap: 25px;
   }
+
+  .count {
+         margin-left: 100px;
+        font-size: 12px !important;
+  
+     } 
 }
 
 /* 768px */
 @media (max-width: 768px) {
   .career-section {
     padding: 20px;
+    margin: 0%;
   }
+   
+   .count {
+         margin-left: 100px;
+        font-size: 12px !important;
+  
+     } 
 
   .career-box {
     padding: 20px;
@@ -271,17 +289,23 @@
     width: 100%;
   }
 
-  .message-count {
+  /* .message-count {
     margin-top: -10px;
     text-align: right;
-  }
+  } */
 }
 
 /* 576px */
 @media (max-width: 576px) {
   .career-section {
     padding: 15px;
+    margin: 0%;
   }
+ 
+    .count {
+         margin-left: 100px;
+        font-size: 12px !important;
+     } 
 
   .career-box {
     padding: 18px;
@@ -311,6 +335,17 @@
     font-size: 20px;
   }
 
+   .career-box {
+      margin-left: 5px !important;
+      margin-right: 10px !important;
+   }
+
+  .count {
+        margin-left: 240px;
+        font-size: 12px !important;
+  
+     } 
+   
   .join-title {
     font-size: 15px;
   }
