--- a/src/css/about.css
+++ b/src/css/about.css
@@ -30,6 +30,7 @@
   padding: 0px !important;
   padding-left: 12px !important;
   padding-right: 0px !important;
+    margin-top: -1px !important;
 }
 
 .back_color_about3 {
