--- a/src/components/contactus/ContactSection.css
+++ b/src/components/contactus/ContactSection.css
@@ -136,6 +136,13 @@
 
 /* RESPONSIVE */
 @media (max-width: 992px) {
+  .info-block .social-icons {
+    gap: 2px;
+    text-align: center;
+    justify-content: center !important;
+  }
+
+
   .contact-section {
     padding: 60px 20px;
   }
@@ -166,7 +173,7 @@
     font-size: 26px;
   }
   .contact-info h3 {
-    font-size: 20px;
+    font-size: 24px;
   }
 }
 
@@ -218,9 +225,7 @@
 
 /* Responsive adjustments */
 @media (max-width: 767px) {
-  .info-row {
-    flex-direction: column;
-  }
+  
 
   .info-block {
     width: 100%;
@@ -241,6 +246,8 @@
   .Contact {
     height: 380px;
   }
+  
+  
 }
 
 /* Tablet */
@@ -248,6 +255,8 @@
   .Contact {
     height: 300px;
   }
+ 
+
 }
 
 /* Mobile */
