--- a/src/css/project.css
+++ b/src/css/project.css
@@ -14,6 +14,7 @@
   overflow: hidden;
   font-family: "Outfit", sans-serif;
 
+
 }
 
 #pills-tab .nav-item {
@@ -746,8 +747,15 @@
 @media (max-width: 992px) {
   .external-icon {
     font-size: 14px;
-
   }
+  
+  
+.main_card .card-row {
+ margin-right:30px;
+ 
+  
+}
+
 }
 
 /* Mobile */
