--- a/bootstrap-5.0.2/site/content/docs/5.0/examples/blog/blog.css
+++ b/bootstrap-5.0.2/site/content/docs/5.0/examples/blog/blog.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   z-index: 2;
   height: 2.75rem;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 .nav-scroller .nav {
