--- a/src/components/home/StatsSection.css
+++ b/src/components/home/StatsSection.css
@@ -1,8 +1,10 @@
 /* STATS SECTION  */
 .stats-section {
   background-color: #EEF3F8;
-  padding: 10px 0;
-  margin-bottom: 10px;
+  padding: 0;
+  padding-top:-40px;
+  margin-bottom: 40px;
+
   
 }
 
