--- a/src/components/home/WorkPlatforms.css
+++ b/src/components/home/WorkPlatforms.css
@@ -1,10 +1,10 @@
 
 .work-platform-section {
   background-color: #fff;
-  padding: 80px 0;
+  padding: 60px 0;
   display: flex;
   justify-content: center;
-   margin-top: -55px;
+   /* margin-bottom: -50px; */
 }
 
 /*  MAIN BOX  */
